--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -24,6 +24,9 @@ html {
     /* background-image: url(../../Assets/home-bg.jpg); */
     background-repeat: no-repeat;
     display: flex;
+    aspect-ratio: 0.1;
+    width: 100%;
+    /* width: max(max-content,100%); */
 
     /* overflow: hidden; */
 }
