--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -26,7 +26,7 @@
 .heading{
     color: #cd5ff8;
     padding-left: 40%;
-    font-family: 'Playfair Display';
+    font-family: 'Montserrat';
     font-weight: 300;
     font-size:48px
 }
