--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -24,16 +24,18 @@ html {
     background-position: top center;    
     /* background-image: url(../../Assets/home-bg.jpg); */
     background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     /* aspect-ratio: 0.1; */
     /* width: 100%; */
+    /* width: max(max-content,100%); */
     width: max(max-content,100%);
-
-    overflow: hidden;
+    height: 100vh;
+    overflow: scroll;
 }
 
 .sidebar{
-    height: 100vh;
+    height: 100%;
     background-color: #1e1e2c;
     width: 70px;
 }
