--- a/src/components/Menus/menu.css
+++ b/src/components/Menus/menu.css
@@ -1,11 +1,18 @@
 .navbar-profile-pic img{
-    border-radius: 90px;
-    height: 150px;
-    width: 150px;
+    border-radius: 40px;
+    height: 200px;
+    width: 160px;
     display: flex;
     vertical-align: middle;
     margin: 0 auto;
     margin-top: 0px;
+    padding: 5px;
+    transition: transform 0.3s ease;
+}
+.navbar-profile-pic img:hover{
+    border: 2px solid orange;
+    box-shadow:#f29f67;
+    transform: scale(1.1);
 }
 .nav-item{
     color: white;
